<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ClipShare</string>
    <string name="edit_message">This gets edited.</string>
    <string name="button_copy">Copy</string>
    <string name="button_filter">Filter</string>
    <string name="button_shorten">Shorten</string>
    <string name="title_main">Share to Clipboard</string>
    <string name="menu_settings">Settings</string>
    <string name="filter_label">Parameter Filtering</string>
    <string name="filter_confirm_label">Finish</string>
    <string name="filter_select_all">All</string>
    <string name="filter_select_none">None</string>
</resources>
