<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/paramList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="true"
                >
  <LinearLayout android:id="@+id/select_buttons"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_alignParentBottom="true"
                >
    <Button android:id="@+id/filter_select_none"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="0.4"
            android:text="@string/filter_select_none"
            android:onClick="selectNone"
            />
    <Button android:id="@+id/filter_select_all"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="0.4"
            android:text="@string/filter_select_all"
            android:onClick="selectAll"
            />
    <Button android:id="@+id/filter_confirm"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="0.3"
            android:text="@string/filter_confirm_label"
            android:onClick="filterConfirm"
            />
  </LinearLayout>
  <ListView android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/select_buttons"
            android:divider="#003355"
            android:dividerHeight="2dp"
            android:choiceMode="multipleChoice"
            />
</RelativeLayout>